--- a/main.html
+++ b/main.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MysTrip</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MysTrip</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/@vetixy/circular-std@1.0.0/dist/index.min.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
+
 <body>
 
-<header id="header">
+  <header id="header">
     <nav>
-        <div class="logo">Logo</div>
-        <div class="nav-links">
-            <a href="#about">About Us</a>
-            <a href="#learn-more">Learn More</a>
-            <a href="#contact">Contact</a>
-        </div>
+      <div class="logo">MysTrip</div>
+      <div class="nav-links">
+        <a href="#about" class="about">About Us</a>
+        <a href="#learn-more" class="learn">Learn More</a>
+        <a href="#contact" class="contact">Contact</a>
+      </div>
     </nav>
-</header>
+  </header>
 
-<div class="carousel-container">
+  <div class="carousel-container">
     <div class="carousel">
-        <div class="slide">
-            <img src="jaipur-overnight-tour.jpg" alt="Slide 1">
-            <h2>Welcome to Our Website</h2>
-        </div>
-        <div class="slide">
-            <img src="Amber-Fort-Jaipur.jpg">
-            <button>Register Now</button>
-        </div>
+      <div class="slide">
+        <img src="jodhpur-rajasthan-1579155930-1920X700.jpg" alt="Slide 1" class="img1">
+        <h3>Your one stop premium travel solution. </h3>
+        <h1>MysTrip</h1>
+        <div class="g33"><img src="Group 33.png" alt=""></div>
+      </div>
+
+      <div class="slide">
+        <img src="app.png" class="img2">
+        <button>Register Now</button>
+      </div>
     </div>
     <div class="mobile-image">
-        <img src="chandra-mahal-palace-city-jaipur-600nw-197619596.webp" alt="Mobile Image">
-        <p>Welcome to our website! Discover great opportunities with us.</p>
+      <img src="chandra-mahal-palace-city-jaipur-600nw-197619596.webp" alt="Mobile Image">
+      <p>Welcome to our website! Discover great opportunities with us.</p>
     </div>
-</div>
-<br><br><br><br><br><br><br>
-<section class="slider-container">
+  </div>
+  <br><br><br><br><br><br><br>
+
+  <div><img src="top.png" class="t1"></div>
+  <div><img src="destinations.png" class="t2"></div><br>
+  <div>
+    <p class="text">It’s hard enough deciding a place to travel to, you don’t have to worry
+      about which places to visit. These are some of the most popular and best
+      locations to move to based on a number of factors. </p>
+  </div>
+
+  <section class="slider-container">
     <button class="slider-btn prev-btn">&lt;</button>
     <div class="slider-wrapper">
       <div class="slider">
         <div class="flexbox">
           <div class="image-container">
-            <img src="image1.jpg" alt="Image 1">
+            <img src="long-road-5982149.webp" alt="Image 1">
           </div>
           <div class="description">
             <h3>Title 1</h3>
@@ -53,7 +71,7 @@
         </div>
         <div class="flexbox">
           <div class="image-container">
-            <img src="image2.jpg" alt="Image 2">
+            <img src="long-road-5982149.webp" alt="Image 2">
           </div>
           <div class="description">
             <h3>Title 2</h3>
@@ -62,41 +80,78 @@
         </div>
         <div class="flexbox">
           <div class="image-container">
-            <img src="image3.jpg" alt="Image 3">
+            <img src="long-road-5982149.webp" alt="Image 3">
           </div>
           <div class="description">
             <h3>Title 3</h3>
             <p>Description for the third item.</p>
           </div>
+          <div class="flexbox">
+            <div class="image-container">
+              <img src="long-road-5982149.webp" alt="Image 3">
+            </div>
+            <div class="description">
+              <h3>Title 3</h3>
+              <p>Description for the third item.</p>
+            </div>
+          </div>
         </div>
         <div class="flexbox">
           <div class="image-container">
-            <img src="image4.jpg" alt="Image 4">
+            <img src="long-road-5982149.webp" alt="Image 3">
           </div>
           <div class="description">
-            <h3>Title 4</h3>
-            <p>Description for the fourth item.</p>
+            <h3>Title 3</h3>
+            <p>Description for the third item.</p>
+          </div>
+          <div class="flexbox">
+            <div class="image-container">
+              <img src="long-road-5982149.webp" alt="Image 3">
+            </div>
+            <div class="description">
+              <h3>Title 3</h3>
+              <p>Description for the third item.</p>
+            </div>
           </div>
         </div>
-        <!-- Add more flexboxes as needed -->
+        <div class="flexbox">
+          <div class="image-container">
+            <img src="long-road-5982149.webp" alt="Image 3">
+          </div>
+          <div class="description">
+            <h3>Title 3</h3>
+            <p>Description for the third item.</p>
+          </div>
+          <div class="flexbox">
+            <div class="image-container">
+              <img src="long-road-5982149.webp" alt="Image 3">
+            </div>
+            <div class="description">
+              <h3>Title 3</h3>
+              <p>Description for the third item.</p>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <button class="slider-btn next-btn">&gt;</button>
+      <button class="slider-btn next-btn">&gt;</button>
   </section>
+
+
   <br><br><br><br><br><br><br><br><br><br><br>
-  
-<footer>
+
+  <footer>
     <p>&copy; 2024 MysTrip. All rights reserved.</p>
     <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
     </div>
-</footer>
+  </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
-<script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+  <script src="script.js"></script>
 
 </body>
+
 </html>
