--- a/main.html
+++ b/main.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
   <link href="https://cdn.jsdelivr.net/npm/@vetixy/circular-std@1.0.0/dist/index.min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-
 <body>
-
   <header id="header">
     <nav>
       <div class="logo">MysTrip</div>
@@ -30,26 +26,26 @@
   <div class="carousel-container">
     <div class="carousel">
       <div class="slide">
-        <img src="jodhpur-rajasthan-1579155930-1920X700.jpg" alt="Slide 1" class="img1">
+        <img src="images/jodhpur-rajasthan-1579155930-1920X700.jpg" alt="Slide 1" class="img1">
         <h3>Your one stop premium travel solution. </h3>
         <h1>MysTrip</h1>
-        <div class="g33"><img src="Group 33.png" alt=""></div>
+        <div class="g33"><img src="images/Group 33.png" alt=""></div>
       </div>
 
       <div class="slide">
-        <img src="app.png" class="img2">
+        <img src="images/app.png" class="img2"> 
         <button>Register Now</button>
       </div>
     </div>
     <div class="mobile-image">
-      <img src="chandra-mahal-palace-city-jaipur-600nw-197619596.webp" alt="Mobile Image">
+      <img src="images/chandra-mahal-palace-city-jaipur-600nw-197619596.webp" alt="Mobile Image">
       <p>Welcome to our website! Discover great opportunities with us.</p>
     </div>
   </div>
   <br><br><br><br><br><br><br>
 
-  <div><img src="top.png" class="t1"></div>
-  <div><img src="destinations.png" class="t2"></div><br>
+  <div><img src="images/top.png" class="t1"></div>
+  <div><img src="images/destinations.png" class="t2"></div><br>
   <div>
     <p class="text">It’s hard enough deciding a place to travel to, you don’t have to worry
       about which places to visit. These are some of the most popular and best
@@ -62,7 +58,7 @@
       <div class="slider">
         <div class="flexbox">
           <div class="image-container">
-            <img src="long-road-5982149.webp" alt="Image 1">
+            <img src="images/long-road-5982149.webp" alt="Image 1">
           </div>
           <div class="description">
             <h3>Title 1</h3>
@@ -71,7 +67,7 @@
         </div>
         <div class="flexbox">
           <div class="image-container">
-            <img src="long-road-5982149.webp" alt="Image 2">
+            <img src="images/long-road-5982149.webp" alt="Image 2">
           </div>
           <div class="description">
             <h3>Title 2</h3>
@@ -80,7 +76,7 @@
         </div>
         <div class="flexbox">
           <div class="image-container">
-            <img src="long-road-5982149.webp" alt="Image 3">
+            <img src="images/long-road-5982149.webp" alt="Image 3">
           </div>
           <div class="description">
             <h3>Title 3</h3>
@@ -88,7 +84,7 @@
           </div>
           <div class="flexbox">
             <div class="image-container">
-              <img src="long-road-5982149.webp" alt="Image 3">
+              <img src="images/long-road-5982149.webp" alt="Image 3">
             </div>
             <div class="description">
               <h3>Title 3</h3>
@@ -98,7 +94,7 @@
         </div>
         <div class="flexbox">
           <div class="image-container">
-            <img src="long-road-5982149.webp" alt="Image 3">
+            <img src="images/long-road-5982149.webp" alt="Image 3">
           </div>
           <div class="description">
             <h3>Title 3</h3>
@@ -106,7 +102,7 @@
           </div>
           <div class="flexbox">
             <div class="image-container">
-              <img src="long-road-5982149.webp" alt="Image 3">
+              <img src="images/long-road-5982149.webp" alt="Image 3">
             </div>
             <div class="description">
               <h3>Title 3</h3>
@@ -116,7 +112,7 @@
         </div>
         <div class="flexbox">
           <div class="image-container">
-            <img src="long-road-5982149.webp" alt="Image 3">
+            <img src="images/long-road-5982149.webp" alt="Image 3">
           </div>
           <div class="description">
             <h3>Title 3</h3>
@@ -124,7 +120,7 @@
           </div>
           <div class="flexbox">
             <div class="image-container">
-              <img src="long-road-5982149.webp" alt="Image 3">
+              <img src="images/long-road-5982149.webp" alt="Image 3">
             </div>
             <div class="description">
               <h3>Title 3</h3>
