--- a/main.html
+++ b/main.html
@@ -174,16 +174,24 @@
           <input type="text" id="itinerary-name" placeholder="Name">
         </div>
         <div class="form-group">
-          <label for="itinerary-email">Email</label>
-          <input type="email" id="itinerary-email" placeholder="Email">
+          <label for="itinerary-contact">Contact Number</label>
+          <input type="number" id="itinerary-contact" placeholder="Contact Number">
+        </div>
+        <div class="form-group"> 
+          <label for="itinerary-age">Age</label>
+          <input type="number" id="itinerary-age" placeholder="Age">
         </div>
         <div class="form-group">
-          <label for="itinerary-destination">Destination</label>
-          <input type="text" id="itinerary-destination" placeholder="Your destination">
+          <label for="itinerary-no.ofdays">No. Of Days for Trip</label> 
+          <input type="number" id="itinerary-no.ofdays" placeholder="No. of Days"> 
         </div>
         <div class="form-group">
-          <label for="itinerary-dates">Preferred Dates</label>
-          <input type="text" id="itinerary-dates" placeholder="Your Preferred dates">
+          <label for="itinerary-no.ofPeople">No. Of People</label> 
+          <input type="number" id="itinerary-no.ofPeople" placeholder="No. of People"> 
+        </div>
+        <div class="form-group">
+          <label for="itinerary-dates">What are you Expecting from Us?</label>
+          <input type="text" id="itinerary-expect" placeholder="Your Expections"> 
         </div>
         <div class="form-group">
           <button>Request Itinerary</button>
