--- a/about.html
+++ b/about.html
@@ -19,23 +19,14 @@
     <nav>
       <div class="logo"><a href="main.html">MysTrip</a></div>
       <div class="nav-links">
-        <a href="about.html" class="about">About Us</a>
+        <a href="#about" class="about">About Us</a>
         <a href="#learn-more" class="learn">Learn More</a>
         <a href="#contact" class="contactss">Contact</a>
       </div>
     </nav>
-  </header><br><br><br><br><br>
-  <h1 class="const">We are under construction.
-    <p><i class='fas fa-tools' style='font-size:70px'></i></p>
-  </h1>
+
   
-  <!--<section id="top">
-    <img src="img/desert.png" id="bg" alt="Background Image" />
-    <img src="img/Untitled design.png" id="man" alt="Foreground Image" />
-    <h1 id="text">Adventure</h1>
-  </section> -->
-
-
+  
 
 <br><br><br><br><br>
 
