--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
   <header id="header">
     <nav>
-      <div class="logo"><a href="main.html">MysTrip</a></div>
+      <div class="logo"><a href="index.html">MysTrip</a></div>
       <div class="nav-links">
         <a href="#about" class="about">About Us</a>
         <a href="#learn-more" class="learn">Learn More</a>
