--- a/detail.html
+++ b/detail.html
@@ -82,10 +82,8 @@
           <li><a href="#">Newsletter</a></li>
         </ul>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/mystrip.in"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/mystrip/"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
