--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
           <li><a href="#">Newsletter</a></li>
         </ul>
         <div class="social-icons">
-          <a href="https://www.instagram.com/mystrip.in"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.linkedin.com/company/mystrip/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/mystrip.in" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/mystrip/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
