--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Catalogue</a></li>
-          <li><a href="#">Feedback</a></li>
+          <li><a href="https://bottlenose-valley-a64.notion.site/15b8b96c8aa581b0a714f8c84d01841c" target="_blank" rel="noopener noreferrer">Feedback</a></li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
